# glyf

./: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
.github/workflows/: ci.yml
apps/glyf/: CLAUDE.md  index.html  package.json  vite.config.ts  vitest.browser.config.ts  vitest.config.ts
apps/glyf/src-tauri/: Cargo.toml  tauri.conf.json
apps/glyf/src-tauri/capabilities/: default.json
apps/glyf/src-tauri/src/: lib.rs  main.rs
apps/glyf/src-tauri/src/commands/: device.rs  display.rs  mod.rs
apps/glyf/src-tauri/src/config/: display_config.rs  mod.rs  storage.rs
apps/glyf/src-tauri/src/hid/: connection.rs  protocol.rs
apps/glyf/src/app/: App.css  App.tsx  providers.tsx
apps/glyf/src/entities/: device.ts  display.ts  touch.ts
apps/glyf/src/pages/: DisplayPage.tsx  SettingsPage.tsx  TouchMonitorPage.tsx
apps/macro-eleven/: package.json  pnpm-lock.yaml
apps/macro-eleven/src-tauri/: Cargo.toml  build.rs
apps/macro-eleven/src-tauri/src/: lib.rs
apps/macro-eleven/src-tauri/src/commands/: device.rs  keymap_commands.rs  layers.rs  mod.rs
apps/macro-eleven/src-tauri/src/config/: default_keymap.json  keymap.rs  mod.rs  storage.rs
apps/macro-eleven/src-tauri/src/executor/: actions.rs  app_detector.rs  mod.rs
apps/macro-eleven/src-tauri/src/executor/runtime/: macos.rs  mod.rs  noop.rs  shortcuts.rs  windows.rs
apps/macro-eleven/src-tauri/src/hid/: connection.rs  keymap_engine.rs  mod.rs
apps/macro-eleven/src-tauri/src/keymap/: parser.rs
apps/macro-eleven/src/app/: App.tsx
apps/macro-eleven/src/entities/: action.ts  key.ts  keymap.ts  layer.ts
apps/macro-eleven/src/pages/: KeymapDesignerPage.tsx
docs/: README.md  product-line.md
domains/: README.md
domains/displays/glyf/: README.md  build.sh
domains/displays/glyf/docs/: glyf.md
domains/glyf/display/: README.md  build.sh  flash-picotool.sh  flash-uf2.sh
domains/glyf/display/docs/: glyf.md
domains/glyf/display/firmware/: CMakeLists.txt
domains/glyf/display/firmware/src/: main.c  pinout.h  tusb_config.h  usb_descriptors.c
domains/glyf/display/firmware/src/display/: st7796s.h
domains/glyf/display/firmware/src/hid/: hid_handler.c  hid_handler.h
domains/glyf/display/firmware/src/touch/: xpt2046.h
domains/macropads/macro-eleven/docs/: HOST_SIDE_KEYMAP_SYSTEM.md
domains/prototypes/macropads/four-pad/: README.md  build.sh
domains/prototypes/macropads/macro-eleven/: README.md  build.sh
domains/rnd/macropads/four-pad/: watch-and-flash.sh
research/: README.md
scripts/: firmware.mjs
sdks/: README.md
shared/libs/display-schema/: package.json  vitest.config.ts
shared/libs/display-schema/src/: schema.test.ts  types.ts
shared/libs/keymap-schema/: README.md  package.json  tsconfig.json  vitest.config.ts
(+64 files in other folders)
