[package]
name = "macro-eleven"
version = "0.1.0"
description = "Macro Eleven Companion App"
authors = ["Miles Roxas"]
edition = "2021"

[lib]
name = "macro_eleven_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-opener = "2.5.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
hidapi = "2.6.5"
regex = "1.12.3"
dirs = "6.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.1"
objc = "0.2.7"
core-graphics = "0.25.0"
